--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {
 <div class="topnav">
     <a class ="active" href="#home"> Home</a>
     <a href="contact">Contact</a>
-    <a href="about">About</a>
+    <a href="am">About</a>
 </div>
 
 <div class="hero-image">
@@ -89,7 +89,7 @@ body, html {
 }
 </style>
 
-<div class ="about-section">
+<div class ="about-section" id="am">
     <h1>About us Page</h1>
     <p> Some text about who we are and what we do.</p>
     <p>Resize the browser window to see that this page is responsive by the way.</p>
